--- a/directions/index.html
+++ b/directions/index.html
@@ -85,6 +85,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         &copy; Conference Organizers
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
-
+<script>
+     gtag('consent', 'default', {
+    'ad_storage': 'denied',
+    'wait_for_update': 500
+  });
+</script>
 </body>
 </html>
