--- a/directions/index.html
+++ b/directions/index.html
@@ -86,9 +86,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 <script>
-     gtag('consent', 'default', {
-    'ad_storage': 'denied',
-    'wait_for_update': 500
+   gtag('consent', 'default', {
+  'ad_storage': 'denied',
+  'ad_user_data': 'denied',
+  'ad_personalization': 'denied',
+  'analytics_storage': 'granted'
+});
   });
 </script>
 </body>
