--- a/directions/index.html
+++ b/directions/index.html
@@ -76,13 +76,12 @@
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 <script>
-   gtag('consent', 'default', {
+  gtag('consent', 'default', {
   'ad_storage': 'denied',
   'ad_user_data': 'denied',
   'ad_personalization': 'denied',
-  'analytics_storage': 'granted'
+  'analytics_storage': 'denied'
 });
-  });
 </script>
 </body>
 </html>
