--- a/index.html
+++ b/index.html
@@ -105,7 +105,14 @@
         &copy; Conference Organizers
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
-
+<script>
+    gtag('consent', 'default', {
+  'ad_storage': 'granted',
+  'ad_user_data': 'denied',
+  'ad_personalization': 'denied',
+  'analytics_storage': 'granted'
+});
+</script>
 </body>
 </html>
 
