--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 <script>
     gtag('consent', 'default', {
   'ad_storage': 'granted',
-  'ad_user_data': 'denied',
-  'ad_personalization': 'denied',
+  'ad_user_data': 'granted',
+  'ad_personalization': 'granted',
   'analytics_storage': 'granted'
 });
 </script>
